# Health-Journal-Summarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_gemini.py
config/: prompts.yaml  settings.example.yaml
data/topics/: science-topics.json
docs/: architecture.md  getting-started.md  index.md  prompts.md  roadmap.md  safety.md  workflow.md
outputs/drafts/: hubungan-hipertensi-dan-latihan-fisik.md
outputs/plans/: hubungan-hipertensi-dan-latihan-fisik.json
outputs/research-notes/: hubungan-hipertensi-dan-latihan-fisik.json
outputs/summaries/: hubungan-hipertensi-dan-latihan-fisik.json
src/: main.py
src/agent/: planner.py  researcher.py  summarizer.py  writer.py
tests/: test_planner.py  test_researcher.py  test_summarizer.py
